--- a/app/src/main/res/layout/activity_tela_resultado.xml
+++ b/app/src/main/res/layout/activity_tela_resultado.xml
@@ -50,4 +50,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/posts" />
+
+    <Button
+        android:id="@+id/star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="StarWars"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/photos" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
